# WizDrive

./: .gitignore  CLAUDE.md  CLAUDE_old.md  ClaudeCodeVisualizer.py  DebugMapLoader.dngn  MEMORY.md  ROADMAP.md  ROADMAP_PRIORITY.md  SECOND_ROADMAP.md  __init__.py  claude_code_visualizer.py  enemy.py  enemyTypes.py  first_person_test.txt  gameState.py  game_state.py  item.py  liveTestOne.dngn  mapLoader.py  mapVisualizer.py  map_loader.py  map_visualizer.py  player.py  pyproject.toml  pytest.ini  requirements.txt  test_visualizer.py  textVisualizer.py  text_visualizer.py  wizDriveMain.py  wiz_drive_main.py
.claude/: settings.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
assets/maps/: DebugMapLoader.dngn
docs/: CODE_REVIEW_NOTES.md  ROADMAP_PRIORITY.md  SECOND_ROADMAP.md
specs/001-persistence-schema-versioning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-item-pickup-mechanics/: plan.md  spec.md  tasks.md
src/: __init__.py
src/wiz_drive/: __init__.py  enemy.py  first_person.py  game_state.py  item.py  map_loader.py  map_visualizer.py  player.py  (+3 more)
tests/: conftest.py  test_combat.py  test_enemy_types.py  test_item_pickup.py  test_item_types.py  test_map_loader.py  test_player.py  test_schema_version.py  test_state.py  test_text_visualizer.py  test_validate_map.py
(+6 files in other folders)
